# tauk-webdriver-python

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml
src/tauk/: __init__.py  tauk_appium.py  temp_test.py  utils.py
tauk/: __init__.py  __main__.py  api.py  config.py  context.py  enums.py  exceptions.py  log_formatter.py  results.py  tauk_appium.py  tauk_webdriver.py  test_data.py  utils.py
tauk/assistant/: assistant.py  config.py
tauk/companion/: companion.py  config.py
tauk/context/: context.py  test_case.py  test_data.py  test_error.py  test_suite.py
tauk/listeners/: unittest_listener.py  unittest_multiprocess_listener.py
tauk/utils2/: requests.py
tests/: README.md  android_contacts_tests.py  project_capabilities.py  tauk_test.py  utils.py
tests/android/: android_contacts_tests.py  test_base.py
tests/api/: api_test.py
tests/chrome/: chrome_tests.py  project_capabilities.py  test_base.py
tests/e2e/: custom_integration_support.py  custom_integration_test.py
tests/e2e/listeners/: selenium_tests.py
tests/e2e/listeners/base_class/: base_testcase.py  selenium_tests.py
tests/e2e/listeners/multiprocess/: launcher.py  main.py  test_one.py  test_two.py
tests/e2e/mock/: selenium_tests.py
tests/listeners/multiprocess/: launcher.py  main.py  test_one.py  test_two.py
