[metadata]
name = tauk
version = 0.0.1
author = Nathan Krishnan
description = Helper package to facilitate reporting for webdriver-based tests on Tauk
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thetauk/tauk-webdriver-python
project_urls =
    Bug Tracker = https://github.com/thetauk/tauk-webdriver-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    Appium-Python-Client

[options.packages.find]
where = src